--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,8 +25,6 @@
 
 <body data-spy="scroll">
 
-
-
     <!---//Facebook button code-->
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
@@ -42,7 +40,7 @@
         <div class="container">
             <h1 class="logo float-left">
                 <a class="scrollto" href="#promo">
-                    <span class="logo-title">devAid</span>
+                    <span class="logo-title">ThenLabs</span>
                 </a>
             </h1><!--//logo-->
             <nav id="main-nav" class="main-nav navbar-expand-md float-right" role="navigation">
@@ -56,12 +54,9 @@
 
                 <div class="navbar-collapse collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="nav-item sr-only"><a class="nav-link scrollto" href="#promo">Home</a></li>
-                        <li class="nav-item"><a class="nav-link scrollto" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link scrollto" href="#features">Features</a></li>
-                        <li class="nav-item"><a class="nav-link scrollto" href="#docs">Docs</a></li>
-                        <li class="nav-item"><a class="nav-link scrollto" href="#license">License</a></li>
-                        <li class="nav-item last"><a class="nav-link scrollto" href="#contact">Contact</a></li>
+                        <li class="nav-item sr-only"><a class="nav-link scrollto" href="#promo">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link scrollto" href="#projects">Proyectos</a></li>
+                        <li class="nav-item"><a class="nav-link scrollto" href="#contact">Contacto</a></li>
                     </ul><!--//nav-->
                 </div><!--//navabr-collapse-->
             </nav><!--//main-nav-->
@@ -71,108 +66,153 @@
     <!-- ******PROMO****** -->
     <section id="promo" class="promo section offset-header">
         <div class="container text-center">
-            <h2 class="title">dev<span class="highlight">Aid</span></h2>
-            <p class="intro">A free Bootstrap 4 theme designed to help developers
-promote their personal projects</p>
+            <h2 class="title">ThenLabs<span class="highlight"></span></h2>
+            <p class="intro">Nos dedicamos a crear y gestionar proyectos de software de código abierto.</p>
             <div class="btns">
-                <a class="btn btn-cta-secondary" href="https://themes.3rdwavemedia.com/" target="_blank">Demo</a>
-                <a class="btn btn-cta-primary" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devaid-free-bootstrap-theme-for-developers-side-projects/" target="_blank">Download</a>
+                <a class="btn btn-cta-secondary" href="#" target="_blank">Conocer más</a>
+                {# <a class="btn btn-cta-primary" href="https://github.com/thenlabs" target="_blank">GitHub</a> #}
             </div>
             <ul class="meta list-inline">
-                <li class="list-inline-item"><a href="https://github.com/xriley/devAid-Theme" target="_blank">View on GitHub</a></li>
+                {# <li class="list-inline-item"><a href="https://github.com/thenlabs" target="_blank">Ver Proyecto</a></li>
                 <li class="list-inline-item"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devaid-free-bootstrap-theme-for-developers-side-projects/" target="_blank">Full Documentation</a></li>
-                <li class="list-inline-item">Created by: <a href="https://themes.3rdwavemedia.com/" target="_blank">Xiaoying Riley</a> at 3rd Wave Media</li>
+                <li class="list-inline-item">Created by: <a href="https://themes.3rdwavemedia.com/" target="_blank">Xiaoying Riley</a> at 3rd Wave Media</li> #}
             </ul><!--//meta-->
         </div><!--//container-->
         <div class="social-media">
             <div class="social-media-inner container text-center">
                 <ul class="list-inline mb-2">
-                    <li class="list-inline-item twitter-follow"><a href="https://twitter.com/3rdwave_themes" class="twitter-follow-button" data-show-count="false">Follow @3rdwave_themes</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+                    <li class="list-inline-item twitter-follow">
+                        <a href="https://twitter.com/3rdwave_themes" class="twitter-follow-button" data-show-count="false">Follow @3rdwave_themes</a>
+                        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                     </li><!--//twitter-follow-->
                     <li class="list-inline-item twitter-tweet">
                         <a href="https://twitter.com/share" class="twitter-share-button" data-via="3rdwave_themes" data-hashtags="bootstrap">Tweet</a>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+                        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                     </li><!--//twitter-tweet-->
                     <li class="list-inline-item facebook-like">
                          <div class="fb-like" data-href="https://themes.3rdwavemedia.com/" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
                     </li><!--//facebook-like-->
                     <!--// Generate github buttons: https://github.com/mdo/github-buttons -->
-                    <li class="list-inline-item github-star">
-<a class="github-button" href="https://github.com/xriley/devaid-theme" data-icon="octicon-star" aria-label="Star xriley/devaid-theme on GitHub">Star</a></li>
-                    <li class="list-inline-item github-follow"><!-- Place this tag where you want the button to render. -->
-<a class="github-button" href="https://github.com/xriley" aria-label="Follow @xriley on GitHub">Follow @xriley</a></li>
+                    <li class="list-inline-item github-star"><a class="github-button" href="https://github.com/xriley/devaid-theme" data-icon="octicon-star" aria-label="Star xriley/devaid-theme on GitHub">Star</a></li>
+                    <li class="list-inline-item github-follow"><!-- Place this tag where you want the button to render. --><a class="github-button" href="https://github.com/xriley" aria-label="Follow @xriley on GitHub">Follow @xriley</a></li>
                 </ul>
             </div>
         </div>
     </section><!--//promo-->
 
     <!-- ******ABOUT****** -->
-    <section id="about" class="about section">
+    <section id="projects" class="about section">
         <div class="container">
-            <h2 class="title text-center">What is devAid?</h2>
-            <p class="intro text-center">Explain your project in detail. Ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>
+            <h2 class="title text-center">Proyectos</h2>
+            <p class="intro text-center">El siguiente listado muestra de manera cronológica los proyectos de nuestra organización. En el caso de los que contienen la etiqueta "Anterior" queremos aclarar que fueron creados antes de nuestra existencia como proyecto, no obstante en lo adelante serán gestionados por nosotros.</p>
             <div class="row">
                 <div class="item col-lg-4 col-md-6 col-12">
                     <div class="icon-holder">
                         <i class="fas fa-heart"></i>
                     </div>
                     <div class="content">
-                        <h3 class="sub-title">Designed for developers</h3>
-                        <p>Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 1000+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome</a> icons available.</p>
+                        <h3 class="sub-title">GluePHP</h3>
+                        <div>
+                            <span class="badge badge-info">PHP</span>
+                            <span class="badge badge-success">Framework</span>
+                            <span class="badge badge-warning">Anterior</span>
+                        </div>
+                        <p>Framework PHP para crear aplicaciones de una sola página (SPA).</p>
+                        <div>
+                            <a href="https://gluephp.readthedocs.io/es/latest/index.html" class="btn btn-secondary btn-sm" target="_blank">Ver Proyecto</a>
+                        </div>
                     </div><!--//content-->
                 </div><!--//item-->
+
                 <div class="item col-lg-4 col-md-6 col-12">
                     <div class="icon-holder">
-                        <i class="far fa-clock"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                     <div class="content">
-                        <h3 class="sub-title">Time saver</h3>
-                        <p>Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 1000+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome</a> icons available.</p>
+                        <h3 class="sub-title">PyramidalTests</h3>
+                        <div>
+                            <span class="badge badge-info">PHP</span>
+                            <span class="badge badge-success">Framework</span>
+                            <span class="badge badge-warning">Anterior</span>
+                        </div>
+                        <p>Convierte PHPUnit en un framework BDD.</p>
+                        <div>
+                            <a href="https://github.com/thenlabs/composed-views" class="btn btn-secondary btn-sm" target="_blank">  Ver Proyecto</a>
+                        </div>
                     </div><!--//content-->
                 </div><!--//item-->
+
                 <div class="item col-lg-4 col-md-6 col-12">
                     <div class="icon-holder">
-                        <i class="fas fa-crosshairs"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                     <div class="content">
-                        <h3 class="sub-title">UX-centred</h3>
-                        <p>Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 1000+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome</a> icons available.</p>
+                        <h3 class="sub-title">Components</h3>
+                        <div>
+                            <span class="badge badge-info">PHP</span>
+                        </div>
+                        <p>Paquete PHP para la creación de tipos de componentes personalizados.</p>
+                        <div>
+                            <a href="https://github.com/thenlabs/components" class="btn btn-secondary btn-sm" target="_blank">Ver Proyecto</a>
+                        </div>
                     </div><!--//content-->
                 </div><!--//item-->
+
                 <div class="clearfix visible-md"></div>
+
                 <div class="item col-lg-4 col-md-6 col-12">
                     <div class="icon-holder">
-                        <i class="fas fa-mobile-alt"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                     <div class="content">
-                        <h3 class="sub-title">Mobile-friendly</h3>
-                        <p>Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 1000+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome</a> icons available.</p>
+                        <h3 class="sub-title">ClassBuilder</h3>
+                        <div>
+                            <span class="badge badge-info">PHP</span>
+                        </div>
+                        <p>Paquete PHP para la construir clases dinámicamente.</p>
+                        <div>
+                            <a href="https://github.com/thenlabs/class-builder" class="btn btn-secondary btn-sm" target="_blank">Ver Proyecto</a>
+                        </div>
                     </div><!--//content-->
                 </div><!--//item-->
+
                 <div class="item col-lg-4 col-md-6 col-12">
                     <div class="icon-holder">
-                        <i class="fas fa-code"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                     <div class="content">
-                        <h3 class="sub-title">Easy to customise</h3>
-                        <p>Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 1000+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome</a> icons available.</p>
+                        <h3 class="sub-title">ThenCLI</h3>
+                        <div>
+                            <span class="badge badge-info">PHP</span>
+                        </div>
+                        <p>Herramientas de línea de comandos para gestionar proyectos de la comunidad.</p>
+                        <div>
+                            <a href="https://github.com/thenlabs/cli" class="btn btn-secondary btn-sm" target="_blank">Ver Proyecto</a>
+                        </div>
                     </div><!--//content-->
                 </div><!--//item-->
+
                 <div class="item col-lg-4 col-md-6 col-12">
                     <div class="icon-holder">
-                        <i class="fas fa-coffee"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                     <div class="content">
-                        <h3 class="sub-title">SCSS source files included</h3>
-                        <p>Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 1000+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome</a> icons available.</p>
+                        <h3 class="sub-title">ComposedViews</h3>
+                        <div>
+                            <span class="badge badge-info">PHP</span>
+                            <span class="badge badge-success">Framework</span>
+                        </div>
+                        <p>Framework PHP para la creación de vistas reutilizables.</p>
+                        <div>
+                            <a href="https://github.com/thenlabs/composed-views" class="btn btn-secondary btn-sm" target="_blank">Ver Proyecto</a>
+                        </div>
                     </div><!--//content-->
                 </div><!--//item-->
             </div><!--//row-->
         </div><!--//container-->
     </section><!--//about-->
 
-    <!-- ******FEATURES****** -->
+    {# <!-- ******FEATURES****** -->
     <section id="features" class="features section">
         <div class="container text-center">
             <h2 class="title">Features</h2>
@@ -186,9 +226,9 @@ promote their personal projects</p>
                 <li><i class="fas fa-check"></i> Compatible with all modern browsers</li>
             </ul>
         </div><!--//container-->
-    </section><!--//features-->
+    </section><!--//features--> #}
 
-    <!-- ******DOCS****** -->
+    {# <!-- ******DOCS****** -->
     <section id="docs" class="docs section">
         <div class="container">
             <div class="docs-inner">
@@ -261,9 +301,9 @@ promote their personal projects</p>
 
             </div><!--//docs-inner-->
         </div><!--//container-->
-    </section><!--//features-->
+    </section><!--//features--> #}
 
-    <!-- ******LICENSE****** -->
+    {# <!-- ******LICENSE****** -->
     <section id="license" class="license section">
         <div class="container">
             <div class="license-inner">
@@ -283,7 +323,7 @@ promote their personal projects</p>
                 </div><!--//cta-container-->
             </div><!--//license-inner-->
         </div><!--//container-->
-    </section><!--//how-->
+    </section><!--//how--> #}
 
     <!-- ******CONTACT****** -->
     <section id="contact" class="contact section has-pattern">
@@ -291,7 +331,7 @@ promote their personal projects</p>
             <div class="contact-inner">
                 <h2 class="title  text-center">Contact</h2>
                 <p class="intro  text-center">I hope you find this Bootstrap template useful. <br />Feel free to get in touch if you have any questions or suggestions.</p>
-                <div class="author-message">
+                {# <div class="author-message">
                     <div class="profile">
                         <img class="img-fluid" src="assets/images/profile.png" alt="" />
                     </div><!--//profile-->
@@ -306,7 +346,7 @@ promote their personal projects</p>
                         </div><!--//source-->
                     </div><!--//speech-bubble-->
                 </div><!--//author-message-->
-                <div class="clearfix"></div>
+                <div class="clearfix"></div> #}
                 <div class="info text-center">
                     <h4 class="sub-title">Get Connected</h4>
                     <ul class="social-icons list-inline">
@@ -337,7 +377,6 @@ promote their personal projects</p>
     <script type="text/javascript" src="{{ asset('devAid/plugins/jquery-scrollTo/jquery.scrollTo.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('devAid/plugins/prism/prism.js') }}"></script>
     <script type="text/javascript" src="{{ asset('devAid/js/main.js') }}"></script>
-
 
 </body>
 </html>
