--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -107,9 +107,9 @@
             <p class="intro text-center">El siguiente listado muestra de manera cronológica los proyectos de nuestra organización. En el caso de los que contienen la etiqueta "Anterior" queremos aclarar que fueron creados antes de nuestra existencia como proyecto, no obstante en lo adelante serán gestionados por nosotros.</p>
             <div class="row">
                 <div class="item col-lg-4 col-md-6 col-12">
-                    <div class="icon-holder">
+                    {# <div class="icon-holder">
                         <i class="fas fa-heart"></i>
-                    </div>
+                    </div> #}
                     <div class="content">
                         <h3 class="sub-title">GluePHP</h3>
                         <div>
@@ -125,9 +125,9 @@
                 </div><!--//item-->
 
                 <div class="item col-lg-4 col-md-6 col-12">
-                    <div class="icon-holder">
+                    {# <div class="icon-holder">
                         <i class="fas fa-heart"></i>
-                    </div>
+                    </div> #}
                     <div class="content">
                         <h3 class="sub-title">PyramidalTests</h3>
                         <div>
@@ -137,15 +137,15 @@
                         </div>
                         <p>Convierte PHPUnit en un framework BDD.</p>
                         <div>
-                            <a href="https://github.com/thenlabs/composed-views" class="btn btn-secondary btn-sm" target="_blank">  Ver Proyecto</a>
+                            <a href="https://github.com/andaniel05/PyramidalTests" class="btn btn-secondary btn-sm" target="_blank">  Ver Proyecto</a>
                         </div>
                     </div><!--//content-->
                 </div><!--//item-->
 
                 <div class="item col-lg-4 col-md-6 col-12">
-                    <div class="icon-holder">
+                    {# <div class="icon-holder">
                         <i class="fas fa-heart"></i>
-                    </div>
+                    </div> #}
                     <div class="content">
                         <h3 class="sub-title">Components</h3>
                         <div>
@@ -161,9 +161,9 @@
                 <div class="clearfix visible-md"></div>
 
                 <div class="item col-lg-4 col-md-6 col-12">
-                    <div class="icon-holder">
+                    {# <div class="icon-holder">
                         <i class="fas fa-heart"></i>
-                    </div>
+                    </div> #}
                     <div class="content">
                         <h3 class="sub-title">ClassBuilder</h3>
                         <div>
@@ -177,9 +177,9 @@
                 </div><!--//item-->
 
                 <div class="item col-lg-4 col-md-6 col-12">
-                    <div class="icon-holder">
+                    {# <div class="icon-holder">
                         <i class="fas fa-heart"></i>
-                    </div>
+                    </div> #}
                     <div class="content">
                         <h3 class="sub-title">ThenCLI</h3>
                         <div>
@@ -193,9 +193,9 @@
                 </div><!--//item-->
 
                 <div class="item col-lg-4 col-md-6 col-12">
-                    <div class="icon-holder">
+                    {# <div class="icon-holder">
                         <i class="fas fa-heart"></i>
-                    </div>
+                    </div> #}
                     <div class="content">
                         <h3 class="sub-title">ComposedViews</h3>
                         <div>
