--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -56,6 +56,7 @@
                     <ul class="nav navbar-nav">
                         <li class="nav-item sr-only"><a class="nav-link scrollto" href="#promo">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link scrollto" href="#projects">Proyectos</a></li>
+                        <li class="nav-item"><a class="nav-link scrollto" href="#socials">Redes Sociales</a></li>
                         <li class="nav-item"><a class="nav-link scrollto" href="#contact">Contacto</a></li>
                     </ul><!--//nav-->
                 </div><!--//navabr-collapse-->
@@ -70,12 +71,9 @@
             <p class="intro">Nos dedicamos a crear y gestionar proyectos de software de código abierto.</p>
             <div class="btns">
                 <a class="btn btn-cta-secondary" href="#" target="_blank">Conocer más</a>
-                {# <a class="btn btn-cta-primary" href="https://github.com/thenlabs" target="_blank">GitHub</a> #}
             </div>
             <ul class="meta list-inline">
-                {# <li class="list-inline-item"><a href="https://github.com/thenlabs" target="_blank">Ver Proyecto</a></li>
-                <li class="list-inline-item"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devaid-free-bootstrap-theme-for-developers-side-projects/" target="_blank">Full Documentation</a></li>
-                <li class="list-inline-item">Created by: <a href="https://themes.3rdwavemedia.com/" target="_blank">Xiaoying Riley</a> at 3rd Wave Media</li> #}
+                <li class="list-inline-item"><a href="https://github.com/thenlabs" target="_blank">Ver en GitHub</a></li>
             </ul><!--//meta-->
         </div><!--//container-->
         <div class="social-media">
@@ -107,9 +105,6 @@
             <p class="intro text-center">El siguiente listado muestra de manera cronológica los proyectos de nuestra organización. En el caso de los que contienen la etiqueta "Anterior" queremos aclarar que fueron creados antes de nuestra existencia como proyecto, no obstante en lo adelante serán gestionados por nosotros.</p>
             <div class="row">
                 <div class="item col-lg-4 col-md-6 col-12">
-                    {# <div class="icon-holder">
-                        <i class="fas fa-heart"></i>
-                    </div> #}
                     <div class="content">
                         <h3 class="sub-title">GluePHP</h3>
                         <div>
@@ -125,9 +120,6 @@
                 </div><!--//item-->
 
                 <div class="item col-lg-4 col-md-6 col-12">
-                    {# <div class="icon-holder">
-                        <i class="fas fa-heart"></i>
-                    </div> #}
                     <div class="content">
                         <h3 class="sub-title">PyramidalTests</h3>
                         <div>
@@ -143,9 +135,6 @@
                 </div><!--//item-->
 
                 <div class="item col-lg-4 col-md-6 col-12">
-                    {# <div class="icon-holder">
-                        <i class="fas fa-heart"></i>
-                    </div> #}
                     <div class="content">
                         <h3 class="sub-title">Components</h3>
                         <div>
@@ -161,9 +150,6 @@
                 <div class="clearfix visible-md"></div>
 
                 <div class="item col-lg-4 col-md-6 col-12">
-                    {# <div class="icon-holder">
-                        <i class="fas fa-heart"></i>
-                    </div> #}
                     <div class="content">
                         <h3 class="sub-title">ClassBuilder</h3>
                         <div>
@@ -177,9 +163,6 @@
                 </div><!--//item-->
 
                 <div class="item col-lg-4 col-md-6 col-12">
-                    {# <div class="icon-holder">
-                        <i class="fas fa-heart"></i>
-                    </div> #}
                     <div class="content">
                         <h3 class="sub-title">ThenCLI</h3>
                         <div>
@@ -193,9 +176,6 @@
                 </div><!--//item-->
 
                 <div class="item col-lg-4 col-md-6 col-12">
-                    {# <div class="icon-holder">
-                        <i class="fas fa-heart"></i>
-                    </div> #}
                     <div class="content">
                         <h3 class="sub-title">ComposedViews</h3>
                         <div>
@@ -212,143 +192,14 @@
         </div><!--//container-->
     </section><!--//about-->
 
-    {# <!-- ******FEATURES****** -->
-    <section id="features" class="features section">
-        <div class="container text-center">
-            <h2 class="title">Features</h2>
-            <ul class="feature-list list-unstyled">
-                <li><i class="fas fa-check"></i> Fully responsive</li>
-                <li><i class="fas fa-check"></i> HTML5 + CSS3</li>
-                <li><i class="fas fa-check"></i> Built on Bootstrap 4</li>
-                <li><i class="fas fa-check"></i> SCSS source files included</li>
-                <li><i class="fas fa-check"></i> 1000+ FontAwesome 5 icons</li>
-                <li><i class="fas fa-check"></i> 4 colour schemes</li>
-                <li><i class="fas fa-check"></i> Compatible with all modern browsers</li>
-            </ul>
-        </div><!--//container-->
-    </section><!--//features--> #}
-
-    {# <!-- ******DOCS****** -->
-    <section id="docs" class="docs section">
-        <div class="container">
-            <div class="docs-inner">
-            <h2 class="title text-center">Get Started</h2>
-            <div class="block">
-                <h3 class="sub-title text-center">HTML</h3>
-                <p><a href="http://prismjs.com/" target="_blank">PrismJS</a> is used as the syntax highlighter here.</p>
-                <p>Below are the details of the custom PrismJS build used in this template. You can <a href="http://prismjs.com/download.html" target="_blank">build your own version</a> via their website should you need to.</p>
-                <ul class="list-unstyled">
-                    <li><strong>Compression level:</strong> Minified</li>
-                    <li><strong>Theme:</strong> Okaidia</li>
-                    <li><strong>Languages:</strong> Markup, CSS, C-like, JavaScript, PHP and Python</li>
-                </ul>
-                <div class="code-block">
-                    <!--//Use Prismjs - http://prismjs.com/index.html#basic-usage -->
-                    <pre><code class="language-markup">
-    &ltp class="my-style"&gt
-      Hello World!
-    &lt/p&gt
-                     </code></pre>
-                </div><!--//code-block-->
-            </div><!--//block-->
-
-            <div class="block">
-                <h3 class="sub-title text-center">CSS</h3>
-                <p>Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.</p>
-
-                <div class="code-block">
-                    <!--//Use Prismjs - http://prismjs.com/index.html#basic-usage -->
-                    <pre>
-    <code class="language-css">
-    /*
-     * Template Name: devAid - Bootstrap 4 theme for developers
-     * Version: 2.0
-     * Author: Xiaoying Riley at 3rd Wave Media
-     * Website: https://themes.3rdwavemedia.com/
-     * Twitter: @3rdwave_themes
-    */
-    body {
-      font-family: 'Lato', arial, sans-serif;
-      color: #444444;
-      font-size: 16px;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-    }
-    </code></pre>
-                </div><!--//code-block-->
-            </div><!--//block-->
-
-            <div class="block">
-                <h3 class="sub-title text-center">JavaScript</h3>
-                <p>Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit ligula eget dolor.</p>
-                <div class="code-block">
-                    <pre><code class="language-javascript">
-    if( awesome ){
-        console.log('This is Awesome');
-    }else{
-        $('body').addClass('give-me-awesome');
-    }
-                    </code></pre>
-                </div><!--//code-block-->
-            </div><!--//block-->
-            <div class="block">
-                <h3 class="sub-title text-center">Full Documentation</h3>
-                <p>If your documentation is very long you can host the full docs page (including FAQ etc) on GitHub and provide a Call to Action button below to direct users there.</p>
-                <p class="text-center">
-                    <a class="btn btn-cta-primary" href="https://github.com/xriley/devAid-Theme" target="_blank">More on GitHub</a>
-                </p>
-            </div><!--//block-->
-
-            </div><!--//docs-inner-->
-        </div><!--//container-->
-    </section><!--//features--> #}
-
-    {# <!-- ******LICENSE****** -->
-    <section id="license" class="license section">
-        <div class="container">
-            <div class="license-inner">
-            <h2 class="title text-center">License</h2>
-                <div class="info">
-                    <p>This Bootstrap theme is made by UX/UI designer <a href="https://twitter.com/3rdwave_themes" target="_blank">Xiaoying Riley</a> at 3rd Wave Media for developers and is <strong>100% FREE</strong> under the <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank">Creative Commons Attribution 3.0 License (CC BY 3.0)</a></p>
-                    <p><strong>[Tip for developers]:</strong> If your project is open source, you might want to put a <a href="https://www.paypal.com/us/cgi-bin/?cmd=_donate-intro-outside" target="_blank">PayPal "Donate" button</a> below so your users can express their gratitude. If your project is commercial, you can put a <a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_singleitem-intro-outside" target="_blank">PayPal "Buy Now" button</a> instead.</p>
-                </div><!--//info-->
-                <div class="cta-container">
-                    <div class="speech-bubble">
-                        <p class="intro">If you want to <strong>use this template without the footer attribution link</strong>, you can <a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devaid-free-bootstrap-theme-for-developers-side-projects/" target="_blank">buy the commercial license</a> via my website. Thank you for your support!</p>
-                        <div class="icon-holder  text-center"><i class="far fa-smile"></i></div>
-                    </div><!--//speech-bubble-->
-                    <div class="btn-container  text-center">
-                        <a class="btn btn-cta-secondary" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devaid-free-bootstrap-theme-for-developers-side-projects/" target="_blank">Buy Commercial License</a>
-                    </div><!--//btn-container-->
-                </div><!--//cta-container-->
-            </div><!--//license-inner-->
-        </div><!--//container-->
-    </section><!--//how--> #}
-
-    <!-- ******CONTACT****** -->
-    <section id="contact" class="contact section has-pattern">
+    <!-- ******SOCIALS****** -->
+    <section id="socials" class="contact section has-pattern">
         <div class="container">
             <div class="contact-inner">
-                <h2 class="title  text-center">Contact</h2>
-                <p class="intro  text-center">I hope you find this Bootstrap template useful. <br />Feel free to get in touch if you have any questions or suggestions.</p>
-                {# <div class="author-message">
-                    <div class="profile">
-                        <img class="img-fluid" src="assets/images/profile.png" alt="" />
-                    </div><!--//profile-->
-                    <div class="speech-bubble">
-                        <h3 class="sub-title">Love free Bootstrap themes and templates?</h3>
-                        <p><a href="https://twitter.com/3rdwave_themes" target="_blank">Follow me on Twitter</a> so you don’t miss any future freebies! You can find all the freebies I made for developers <a href="https://themes.3rdwavemedia.com/bootstrap-templates/free/" target="_blank">here</a>.</p>
-                        <p><strong>[Tip for developers]:</strong> If you take on freelance work you can put a tailored message here about your availability to attract potential clients. Be creative and good luck! :)</p>
-                        <div class="source">
-                            <span class="name"><a href="https://twitter.com/3rdwave_themes" target="_blank">Xiaoying Riley</a></span>
-                            <br />
-                            <span class="title">UX/UI Designer</span>
-                        </div><!--//source-->
-                    </div><!--//speech-bubble-->
-                </div><!--//author-message-->
-                <div class="clearfix"></div> #}
-                <div class="info text-center">
-                    <h4 class="sub-title">Get Connected</h4>
+                <h2 class="title  text-center">Redes Sociales</h2>
+                <div class="text-center">
+                    <p class="text-center">I hope you find this Bootstrap template useful. <br />Feel free to get in touch if you have any questions or suggestions.</p>
+
                     <ul class="social-icons list-inline">
                         <li class="list-inline-item"><a href="https://twitter.com/3rdwave_themes" target="_blank"><i class="fab fa-twitter"></i></a></li>
                         <li class="list-inline-item"><a href="https://www.facebook.com/3rdwavethemes" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
@@ -357,6 +208,18 @@
                         <li class="list-inline-item"><a href="https://dribbble.com/Xiaoying" target="_blank"><i class="fab fa-dribbble"></i></a></li>
                         <li class="list-inline-item last"><a href="https://themes.3rdwavemedia.com/contact/" target="_blank"><i class="fas fa-envelope"></i></a></li>
                     </ul>
+                </div>
+            </div><!--//contact-inner-->
+        </div><!--//contact-->
+    </section><!--//contact-->
+
+    <!-- ******CONTACT****** -->
+    <section id="contact" class="contact section has-pattern" style="padding-top: 0">
+        <div class="container">
+            <div class="contact-inner">
+                <h2 class="title  text-center">Contactar</h2>
+                <div class="info text-center">
+                    <p class="text-center">Si desea contactar con nosotros puede enviarnos un correo electrónico a la dirección <br> <a href="mailto:thenlabs@gmail.com">thenlabs@gmail.com</a></p>
                 </div><!--//info-->
             </div><!--//contact-inner-->
         </div><!--//container-->
