--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,7 +39,7 @@
     <header id="header" class="header">
         <div class="container">
             <h1 class="logo float-left">
-                <a class="scrollto" href="#promo">
+                <a class="scrollto" href="{{ path('index') }}">
                     <span class="logo-title">ThenLabs</span>
                 </a>
             </h1><!--//logo-->
