--- a/templates/devAid/page-index.html.twig
+++ b/templates/devAid/page-index.html.twig
@@ -1,33 +1,6 @@
 
 {% extends 'devAid/layout.html.twig' %}
 
-{% set nav_items = [
-    {
-        'li_class': 'nav-item sr-only',
-        'a_class': 'nav-link scrollto',
-        'href': '#promo',
-        'text': 'Inicio',
-    },
-    {
-        'li_class': 'nav-item',
-        'a_class': 'nav-link scrollto',
-        'href': '#projects',
-        'text': 'Proyectos',
-    },
-    {
-        'li_class': 'nav-item',
-        'a_class': 'nav-link scrollto',
-        'href': '#socials',
-        'text': 'Redes Sociales',
-    },
-    {
-        'li_class': 'nav-item',
-        'a_class': 'nav-link scrollto',
-        'href': '#contact',
-        'text': 'Contacto',
-    },
-] %}
-
 {% block content %}
     <!---//Facebook button code-->
     <div id="fb-root"></div>
@@ -170,14 +143,12 @@
             <div class="contact-inner">
                 <h2 class="title  text-center">Redes Sociales</h2>
                 <div class="text-center">
-                    <p class="text-center">I hope you find this Bootstrap template useful. <br />Feel free to get in touch if you have any questions or suggestions.</p>
+                    <p class="text-center">Dado que intentamos a estar en constante evolución <br> usted puede suscribirse a nuestras redes sociales si desea mantenerse informado.</p>
 
                     <ul class="social-icons list-inline">
-                        <li class="list-inline-item"><a href="https://twitter.com/3rdwave_themes" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                        <li class="list-inline-item"><a href="https://www.facebook.com/3rdwavethemes" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                        <li class="list-inline-item"><a href="https://medium.com/@3rdwave_themes/" target="_blank"><i class="fab fa-medium-m"></i></a></li>
-                        <li class="list-inline-item"><a href="https://dribbble.com/Xiaoying" target="_blank"><i class="fab fa-dribbble"></i></a></li>
-                        <li class="list-inline-item last"><a href="https://themes.3rdwavemedia.com/contact/" target="_blank"><i class="fas fa-envelope"></i></a></li>
+                        <li class="list-inline-item"><a href="https://t.me/thenlabs" target="_blank"><i class="fab fa-telegram"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.facebook.com/ThenLabs-110165223984090/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                        <li class="list-inline-item last"><a href="https://twitter.com/ThenLabsOrg" target="_blank"><i class="fab fa-twitter"></i></a></li>
                     </ul>
                 </div>
             </div><!--//contact-inner-->
@@ -190,7 +161,7 @@
             <div class="contact-inner">
                 <h2 class="title  text-center">Contactar</h2>
                 <div class="info text-center">
-                    <p class="text-center">Si desea contactar con nosotros puede enviarnos un correo electrónico a la dirección <br> <a href="mailto:thenlabs@gmail.com">thenlabs@gmail.com</a></p>
+                    <p class="text-center">Para contactarnos puede escribirnos a: <br> <a href="mailto:thenlabs@gmail.com">thenlabs@gmail.com</a></p>
                 </div><!--//info-->
             </div><!--//contact-inner-->
         </div><!--//container-->
