--- a/templates/devAid/page-index.html.twig
+++ b/templates/devAid/page-index.html.twig
@@ -36,7 +36,7 @@
                         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                     </li><!--//twitter-tweet-->
                     <li class="list-inline-item facebook-like">
-                         <div class="fb-like" data-href="https://themes.3rdwavemedia.com/" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
+                         <div class="fb-like" data-href="{{ facebook_url }}" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
                     </li><!--//facebook-like-->
                 </ul>
             </div>
@@ -146,9 +146,9 @@
                     <p class="text-center">Dado que intentamos a estar en constante evolución <br> usted puede suscribirse a nuestras redes sociales si desea mantenerse informado.</p>
 
                     <ul class="social-icons list-inline">
-                        <li class="list-inline-item"><a href="https://t.me/thenlabs" target="_blank"><i class="fab fa-telegram"></i></a></li>
-                        <li class="list-inline-item"><a href="https://www.facebook.com/ThenLabs-110165223984090/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                        <li class="list-inline-item last"><a href="https://twitter.com/ThenLabsOrg" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        <li class="list-inline-item"><a href="{{ telegram_url }}" target="_blank"><i class="fab fa-telegram"></i></a></li>
+                        <li class="list-inline-item"><a href="{{ facebook_url }}" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                        <li class="list-inline-item last"><a href="{{ twitter_url }}" target="_blank"><i class="fab fa-twitter"></i></a></li>
                     </ul>
                 </div>
             </div><!--//contact-inner-->
