--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,16 @@
     <meta name="description" content="">
     <meta name="author" content="thenlabs">
     {# <link rel="shortcut icon" href="favicon.ico"> #}
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163364401-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-163364401-1');
+    </script>
+
     {% block styles %}{% endblock %}
 </head>
 
