--- a/templates/devAid/page-index.html.twig
+++ b/templates/devAid/page-index.html.twig
@@ -18,7 +18,7 @@
             <h2 class="title">ThenLabs<span class="highlight"></span></h2>
             <p class="intro">Nos dedicamos a crear y gestionar proyectos de software de código abierto.</p>
             <div class="btns">
-                <a class="btn btn-cta-secondary" href="{{ path('about') }}" target="_blank">Conocer más</a>
+                <a class="btn btn-cta-secondary" href="{{ path('faq') }}">Conocer más</a>
             </div>
             <ul class="meta list-inline">
                 <li class="list-inline-item"><a href="https://github.com/thenlabs" target="_blank">Ver en GitHub</a></li>
