--- a/templates/devAid/page-faq.html.twig
+++ b/templates/devAid/page-faq.html.twig
@@ -6,9 +6,10 @@
         <div class="container">
             <div class="docs-inner">
                 <h2 class="title text-center">Preguntas Frecuentes</h2>
+
                 <div class="block">
-                    <h4 class="sub-title">1. Qué es ThenLabs?</h4>
-                    <p></p>
+                    <h4 class="sub-title">1. ¿Qué es ThenLabs?</h4>
+                    <p>Primeramente queremos aclarar que ThenLabs es un proyecto que recién comienza.</p>
                 </div><!--//block-->
 
                 <div class="block">
@@ -16,7 +17,6 @@
                         <a class="btn btn-cta-primary" href="{{ path('index') }}">Volver a la página principal</a>
                     </p>
                 </div><!--//block-->
-
             </div><!--//docs-inner-->
         </div><!--//container-->
     </section>
