--- a/templates/devAid/page-faq.html.twig
+++ b/templates/devAid/page-faq.html.twig
@@ -9,7 +9,12 @@
 
                 <div class="block">
                     <h4 class="sub-title">1. ¿Qué es ThenLabs?</h4>
-                    <p>Primeramente queremos aclarar que ThenLabs es un proyecto que recién comienza.</p>
+                    <p>ThenLabs se podría definir como una Startup del sector de la informática dedicada a crear y gestionar proyectos de software de código abierto.</p>
+                </div><!--//block-->
+
+                <div class="block">
+                    <h4 class="sub-title">2. ¿Por qué una Startup?</h4>
+                    <p>Nos definimos como una Startup dado que somos un emprendimiento que recién comienza y que pensamos escalarlo de diferentes maneras a medida que se vayan alcanzando una serie de objetivos planificados.</p>
                 </div><!--//block-->
 
                 <div class="block">
