--- a/templates/devAid/page-faq.html.twig
+++ b/templates/devAid/page-faq.html.twig
@@ -24,6 +24,11 @@
                 </div><!--//block-->
 
                 <div class="block">
+                    <h4 class="sub-title">4. ¿Qué proyectos tienen realizados?</h4>
+                    <p>En la página principal existe una sección que muestra <a href="{{ path('index') }}#projects">nuestros proyectos realizados</a>. En la misma podrán notar que se indica que algunos fueron desarrollados antes de nuestra existencia. Dado que consideramos que los mismos tienen determinada utilidad serán retomados por nosotros ya que en algunos casos han sido abandonados.</p>
+                </div><!--//block-->
+
+                <div class="block">
                     <p class="text-center">
                         <a class="btn btn-cta-primary" href="{{ path('index') }}">Volver a la página principal</a>
                     </p>
