--- a/templates/devAid/page-index.html.twig
+++ b/templates/devAid/page-index.html.twig
@@ -143,7 +143,7 @@
             <div class="contact-inner">
                 <h2 class="title  text-center">Redes Sociales</h2>
                 <div class="text-center">
-                    <p class="text-center">Dado que pretendemos estar en constante desarrollo <br> usted puede suscribirse a nuestras redes sociales si desea mantenerse informado.</p>
+                    <p class="text-center">Suscríbase a nuestras redes sociales si desea mantenerse informado. <br> Próximamente estaremos estrenando nuestro blog y compartiremos los artículos por las mismas.</p>
 
                     <ul class="social-icons list-inline">
                         <li class="list-inline-item"><a href="{{ telegram_url }}" target="_blank"><i class="fab fa-telegram"></i></a></li>
