--- a/templates/devAid/page-index.html.twig
+++ b/templates/devAid/page-index.html.twig
@@ -21,7 +21,12 @@
                 <a class="btn btn-cta-secondary" href="{{ path('faq') }}">Conocer más</a>
             </div>
             <ul class="meta list-inline">
-                <li class="list-inline-item"><a href="https://github.com/thenlabs" target="_blank">Ver en GitHub</a></li>
+                <li class="list-inline-item">
+                    <a href="https://github.com/thenlabs" target="_blank">
+                        <i class="fab fa-github"></i>
+                        Ver en GitHub
+                    </a>
+                </li>
             </ul><!--//meta-->
         </div><!--//container-->
         <div class="social-media">
