--- a/templates/devAid/page-docs.html.twig
+++ b/templates/devAid/page-docs.html.twig
@@ -26,7 +26,7 @@
     <section id="docs" class="docs section">
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-lg-3">
                     <div class="wrapper-content section-menu">
                         <ul class="list-unstyled">
                             {% for item in menu %}
@@ -36,7 +36,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-9">
+                <div class="col-lg-9">
                     <div class="wrapper-content docs-content">
                         <h2 class="title text-center">{{ contentTitle }}</h2>
                         {{ content|raw }}
