--- a/templates/devAid/page-index.html.twig
+++ b/templates/devAid/page-index.html.twig
@@ -92,7 +92,7 @@
                         </div>
                         <p>Paquete PHP para la creación de tipos de componentes personalizados.</p>
                         <div>
-                            <a href="https://github.com/thenlabs/components" class="btn btn-secondary btn-sm" target="_blank">Ver Proyecto</a>
+                            <a href="{{ path('docs', { project: 'components', branch: 'master', language: 'es', document: 'index' }) }}" class="btn btn-secondary btn-sm">Ver Proyecto</a>
                         </div>
                     </div><!--//content-->
                 </div><!--//item-->
