--- a/templates/devAid/page-index.html.twig
+++ b/templates/devAid/page-index.html.twig
@@ -107,7 +107,7 @@
                         </div>
                         <p>Paquete PHP para la construir clases dinámicamente.</p>
                         <div>
-                            <a href="https://github.com/thenlabs/class-builder" class="btn btn-secondary btn-sm" target="_blank">Ver Proyecto</a>
+                            <a href="{{ path('docs', { project: 'class-builder', branch: 'master', language: 'es', document: 'index' }) }}" class="btn btn-secondary btn-sm">Ver Proyecto</a>
                         </div>
                     </div><!--//content-->
                 </div><!--//item-->
@@ -120,7 +120,7 @@
                         </div>
                         <p>Herramientas de línea de comandos para gestionar proyectos de la comunidad.</p>
                         <div>
-                            <a href="https://github.com/thenlabs/cli" class="btn btn-secondary btn-sm" target="_blank">Ver Proyecto</a>
+                            <a href="{{ path('docs', { project: 'cli', branch: 'master', language: 'es', document: 'index' }) }}" class="btn btn-secondary btn-sm">Ver Proyecto</a>
                         </div>
                     </div><!--//content-->
                 </div><!--//item-->
