--- a/templates/devAid/page-index.html.twig
+++ b/templates/devAid/page-index.html.twig
@@ -134,7 +134,7 @@
                         </div>
                         <p>Framework PHP para la creación de vistas reutilizables.</p>
                         <div>
-                            <a href="https://github.com/thenlabs/composed-views" class="btn btn-secondary btn-sm" target="_blank">Ver Proyecto</a>
+                            <a href="{{ path('docs', { project: 'composed-views', branch: 'master', language: 'es', document: 'index' }) }}" class="btn btn-secondary btn-sm">Ver Proyecto</a>
                         </div>
                     </div><!--//content-->
                 </div><!--//item-->
