--- a/templates/devAid/page-index.html.twig
+++ b/templates/devAid/page-index.html.twig
@@ -79,7 +79,7 @@
                         </div>
                         <p>Convierte PHPUnit en un framework BDD.</p>
                         <div>
-                            <a href="https://github.com/andaniel05/PyramidalTests" class="btn btn-secondary btn-sm" target="_blank">  Ver Proyecto</a>
+                            <a href="{{ path('docs', { project: 'pyramidal-tests', branch: 'master', resource: 'README.es.md' }) }}" class="btn btn-secondary btn-sm">  Ver Proyecto</a>
                         </div>
                     </div><!--//content-->
                 </div><!--//item-->
