--- a/templates/devAid/page-faq.html.twig
+++ b/templates/devAid/page-faq.html.twig
@@ -19,7 +19,7 @@
 
                 <div class="block">
                     <h4 class="sub-title">3. ¿Qué tipo de proyectos realizan?</h4>
-                    <p>Mayormente nos dedicamos a crear proyectos base que serán usados por otros programadores a la hora de crear nuevos proyectos de software. Dicho de otra manera, hacemos herramientas para programadores.</p>
+                    <p>Mayormente nos dedicamos a crear proyectos base que serán usados por otros programadores a la hora de crear sus propios proyectos. Dicho de otra manera, hacemos herramientas para programadores.</p>
                     <p>Aunque no estamos encasillados en determinadas áreas en específico, todos los proyectos que hemos desarrollado hasta el momento están relacionados con el desarrollo web con PHP. Muchos de los venideros también estarán relacionados con esta área.</p>
                 </div><!--//block-->
 
