--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,13 @@
-<!DOCTYPE html>
+{% if not title is defined %}
+    {% if pageTitle is defined %}
+        {% set title = pageTitle ~ ' | ThenLabs' %}
+    {% else %}
+        {% set title = 'ThenLabs' %}
+    {% endif %}
+{% endif %}<!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>ThenLabs</title>
+    <title>{{ title }}</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
