--- a/templates/devAid/page-docs.html.twig
+++ b/templates/devAid/page-docs.html.twig
@@ -27,12 +27,22 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-3">
-                    <div class="wrapper-content section-menu">
-                        <ul class="list-unstyled">
-                            {% for item in menu %}
-                                <li><a class="scrollto" href="#{{ item.id }}">{{ item.text }}</a></li>
-                            {% endfor %}
-                        </ul>
+                    <div class="row">
+                        <div class="col">
+                            <div class="wrapper-content section-menu">
+                                <ul class="list-unstyled">
+                                    {% for item in menu %}
+                                        <li><a class="scrollto" href="#{{ item.id }}">{{ item.text }}</a></li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col">
+                            <iframe data-aa="1388745" src="//acceptable.a-ads.com/1388745" scrolling="no" style="border:0px; padding:0; width:100%; height:100%; overflow:hidden" allowtransparency="true"></iframe>
+                        </div>
                     </div>
                 </div>
 
