--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,8 +12,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="thenlabs">
+    <meta name="description" content="Nos dedicamos a crear y gestionar proyectos de software de código abierto.">
+    <meta name="author" content="ThenLabs">
     {# <link rel="shortcut icon" href="favicon.ico"> #}
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163364401-1"></script>
