--- a/templates/devAid/page-index.html.twig
+++ b/templates/devAid/page-index.html.twig
@@ -143,6 +143,34 @@
         </div><!--//container-->
     </section><!--//about-->
 
+    <section id="" class="features section">
+        <div class="container text-center">
+            <h2 class="title">Blog</h2>
+        </div><!--//container-->
+    </section>
+
+    <section id="projects" class="about section">
+        <div class="container">
+            <h2 class="title text-center">Proyectos</h2>
+            <p class="intro text-center">El siguiente listado muestra los proyectos de nuestra organización. En el caso de los que contienen la etiqueta "Anterior" queremos aclarar que fueron creados antes de nuestra existencia como proyecto, no obstante en lo adelante serán de alguna manera retomados por nosotros.</p>
+            <div class="row">
+                <div class="item col-lg-4 col-md-6 col-12">
+                    <div class="content">
+                        <h3 class="sub-title">ComposedViews</h3>
+                        <div>
+                            <span class="badge badge-info">PHP</span>
+                            <span class="badge badge-success">Framework</span>
+                        </div>
+                        <p>Framework PHP para la creación de vistas reutilizables.</p>
+                        <div>
+                            <a href="{{ path('docs', { project: 'composed-views', branch: 'master', language: 'es', resource: 'index', extension: 'html' }) }}" class="btn btn-secondary btn-sm">Ver Proyecto</a>
+                        </div>
+                    </div><!--//content-->
+                </div><!--//item-->
+            </div><!--//row-->
+        </div><!--//container-->
+    </section><!--//about-->
+
     <!-- ******SOCIALS****** -->
     <section id="socials" class="contact section has-pattern">
         <div class="container">
