--- a/templates/devAid/layout.html.twig
+++ b/templates/devAid/layout.html.twig
@@ -45,6 +45,36 @@
 
     {% block content %}{% endblock %}
 
+    <!-- ******SOCIALS****** -->
+    <section id="socials" class="contact section has-pattern">
+        <div class="container">
+            <div class="contact-inner">
+                <h2 class="title  text-center">Redes Sociales</h2>
+                <div class="text-center">
+                    <p class="text-center">Suscríbase a nuestras redes sociales si desea mantenerse informado. <br> Próximamente estaremos estrenando nuestro blog y compartiremos los artículos por las mismas.</p>
+
+                    <ul class="social-icons list-inline">
+                        <li class="list-inline-item"><a href="{{ telegram_url }}" target="_blank"><i class="fab fa-telegram"></i></a></li>
+                        <li class="list-inline-item"><a href="{{ facebook_url }}" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                        <li class="list-inline-item last"><a href="{{ twitter_url }}" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                    </ul>
+                </div>
+            </div><!--//contact-inner-->
+        </div><!--//contact-->
+    </section><!--//contact-->
+
+    <!-- ******CONTACT****** -->
+    <section id="contact" class="contact section has-pattern" style="padding-top: 0">
+        <div class="container">
+            <div class="contact-inner">
+                <h2 class="title  text-center">Contactar</h2>
+                <div class="info text-center">
+                    <p class="text-center">Para contactarnos puede escribirnos a: <br> <a href="mailto:thenlabs@gmail.com">thenlabs@gmail.com</a></p>
+                </div><!--//info-->
+            </div><!--//contact-inner-->
+        </div><!--//container-->
+    </section><!--//contact-->
+
     <!-- ******FOOTER****** -->
     <footer class="footer">
         <div class="container text-center">
