--- a/templates/devAid/layout.html.twig
+++ b/templates/devAid/layout.html.twig
@@ -8,7 +8,25 @@
             'a_class' : 'nav-link',
             'href'    : path('index'),
             'text'    : 'Inicio',
-        }
+        },
+        {
+            'li_class': 'nav-item',
+            'a_class' : 'nav-link',
+            'href'    : path('index') ~ '#projects',
+            'text'    : 'Proyectos',
+        },
+        {
+            'li_class': 'nav-item',
+            'a_class' : 'nav-link scrollto',
+            'href'    : path('index') ~ '#socials',
+            'text'    : 'Redes Sociales',
+        },
+        {
+            'li_class': 'nav-item',
+            'a_class' : 'nav-link scrollto',
+            'href'    : path('index') ~ '#contact',
+            'text'    : 'Contactar',
+        },
     ] %}
 {% endif %}
 
