--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -61,6 +61,7 @@
 </head>
 
 <body data-spy="scroll">
+    {% block before_body %}{% endblock %}
     {% block body %}{% endblock %}
 
     {% block scripts %}{% endblock %}
