--- a/templates/devAid/page-docs.html.twig
+++ b/templates/devAid/page-docs.html.twig
@@ -58,7 +58,7 @@
 
         <div class="row">
             <div class="col">
-                <div class="fb-comments" data-href="{{ app.request.schemeAndHttpHost ~ app.request.requestUri }}" data-numposts="5" data-width=""></div>
+                <div class="fb-comments" data-href="{{ app.request.schemeAndHttpHost ~ app.request.requestUri }}" data-numposts="5" data-width="100%"></div>
             </div>
         </div>
 
