--- a/templates/devAid/layout-sidebar.html.twig
+++ b/templates/devAid/layout-sidebar.html.twig
@@ -15,7 +15,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="col text-center" style="padding-top: 15px">
+                        <div class="col text-center" style="padding: 20px 0">
                             <a href="https://a-ads.com?partner=1399531">Insertar un anuncio aquí</a>
                         </div>
                     </div>
