--- a/templates/devAid/layout.html.twig
+++ b/templates/devAid/layout.html.twig
@@ -17,6 +17,12 @@
         },
         {
             'li_class': 'nav-item',
+            'a_class' : 'nav-link',
+            'href'    : path('index') ~ '#blog',
+            'text'    : 'Blog',
+        },
+        {
+            'li_class': 'nav-item',
             'a_class' : 'nav-link scrollto',
             'href'    : path('index') ~ '#socials',
             'text'    : 'Redes Sociales',
